<android.support.design.widget.CoordinatorLayout
    android:id="@+id/fragment_book_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.mannas.capstone.BookDetailActivity"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:contentDescription="@string/book_image_description"
                android:id="@+id/cover_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:tint="#11001110"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.9" />
            <View
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:background="@drawable/photo_background_protection" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!--  content  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/by_statment"
                        style="@style/TextView_Medium_Link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="By :- johnny depp" />

                    <TextView
                        android:id="@+id/publish_date"
                        style="@style/TextView_Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="published :- 1984" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="#000000" />

                    <LinearLayout

                        android:id="@+id/available_offline"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextView_Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/available_offline" />

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/offline_pdf"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="15dp"
                                android:layout_weight="1"
                                android:src="@drawable/pdf" />

                            <ImageView
                                android:id="@+id/offline_epub"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="20dp"
                                android:layout_weight="1"
                                android:src="@drawable/epub" />

                            <ImageView
                                android:id="@+id/offline_txt"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="20dp"
                                android:layout_weight="1"
                                android:src="@drawable/txt" />
                        </LinearLayout>

                    </LinearLayout>
                    <TextView
                        android:id="@+id/view_online"
                        style="@style/TextView_Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:drawableBottom="@drawable/online"
                        android:layout_margin="15dp"
                        android:text="@string/view_online" />

                    <TextView
                        android:id="@+id/number_of_pages"
                        style="@style/TextView_Medium_Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Is 120 pages" />

                    <TextView
                        android:id="@+id/notes"
                        style="@style/TextView_Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/n_a" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/textView"
                        style="@style/TextView_Medium_Link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/authors" />
                    <co.lujun.androidtagview.TagContainerLayout
                        android:id="@+id/authors_tag_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:container_enable_drag="false"
                        app:horizontal_interval="10dp"
                        app:tag_clickable="true"
                        android:visibility="gone"
                        app:vertical_interval="10dp" />
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/authors_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextView_Medium_Link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/downloads" />



                    <include
                        android:id="@+id/has_downloads_view"
                        layout="@layout/download_extension_select_dialog"
                        android:visibility="gone" />

                    <include
                        android:id="@+id/nothas_downloads_view"
                        layout="@layout/download_extension_select_dialog_error"
                        android:visibility="gone" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
            android:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <TextView
                        style="@style/TextView_Medium_Link"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/related_subjects" />
                    <co.lujun.androidtagview.TagContainerLayout
                        android:id="@+id/subjects_tag_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:container_enable_drag="false"

                        app:horizontal_interval="10dp"
                        app:tag_clickable="true"
                        app:vertical_interval="10dp" />
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/subjects_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="6dp"
        app:pressedTranslationZ="6dp"
        app:layout_anchor="@+id/detail"
        app:layout_anchorGravity="top|end"

        app:srcCompat="@drawable/share"

        />

</android.support.design.widget.CoordinatorLayout>
